ingress-tests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: what-is-my-pod-deployment
  namespace: default
  labels:
    app: what-is-my-pod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: what-is-my-pod
  template:
    metadata:
      labels:
        app: what-is-my-pod
    spec:
      containers:
        - name: what-is-my-pod
          image: ovhplatform/what-is-my-pod:1.0.1
          ports:
            - containerPort: 8080
          resources: {}
